# MnemonicOS

./: .gitignore  LICENSE  README.md  pyproject.toml
api/: openapi.yaml
brain/data/: .gitkeep
brain/locks/: .gitkeep
brain/raw/assets/: .gitkeep
brain/raw/docs/: .gitkeep
brain/raw/sessions/: .gitkeep
brain/raw/web_clips/: .gitkeep
brain/system/: ACTIVE.md  AGENTS.md  MEMORY.md  USER.md
brain/templates/: concept.md  decision.md  incident.md  person.md  procedure.md  project.md  repo.md  review.md  source.md
brain/wiki/: index.md  log.md
brain/wiki/concepts/: .gitkeep
brain/wiki/decisions/: .gitkeep
brain/wiki/incidents/: .gitkeep
brain/wiki/journals/: .gitkeep
brain/wiki/overviews/: .gitkeep
brain/wiki/people/: .gitkeep
brain/wiki/procedures/active/: .gitkeep
brain/wiki/procedures/drafts/: .gitkeep
brain/wiki/procedures/retired/: .gitkeep
brain/wiki/projects/: .gitkeep
brain/wiki/repos/: .gitkeep
brain/wiki/review/: .gitkeep
brain/wiki/sources/: .gitkeep
config/: memory.example.toml
docs/: IMPLEMENTATION_PLAN.md
evals/: queries.jsonl
evals/results/: .gitkeep
migrations/: 001_initial_schema.sql  002_phase2_semantic_and_ingest.sql  003_phase3_graph_cache.sql  004_phase4_trust_freshness.sql
src/second_brain/: __init__.py  cli.py  config.py  db.py  graph.py  ingest.py  jobs.py  models.py  ops.py  parser.py  paths.py  retrieval.py  review.py  semantics.py  summaries.py  sync.py  trust.py
tests/: test_phase1.py  test_phase2.py  test_phase25.py  test_phase3.py  test_phase4.py
